@@ -31,6 +31,36 @@ class CollectionsTemplateColumnCreateProcessor extends modObjectCreateProcessor 
             }
         }
 
+        $label = $this->getProperty('label');
+        if (empty($label)) {
+            $autoLabel = false;
+
+            if (strpos($name, 'tv_') !== false) {
+                $tvName = preg_replace('/tv_/', '', $name, 1);
+                /** @var modTemplateVar $tv */
+                $tv = $this->modx->getObject('modTemplateVar', array('name' => $tvName));
+                if ($tv) {
+                    $this->setProperty('label', $tv->caption);
+                    $autoLabel = true;
+                }
+            }
+
+            $useTagger = $this->modx->collections->getOption('taggerInstalled', null,  false);
+            if ($useTagger && (strpos($name, 'tagger_') !== false)) {
+                $groupName = preg_replace('/tagger_/', '', $name, 1);
+                /** @var TaggerGroup $taggerGroup */
+                $taggerGroup = $this->modx->getObject('TaggerGroup', array('alias' => $groupName));
+                if ($taggerGroup) {
+                    $this->setProperty('label', $taggerGroup->name);
+                    $autoLabel = true;
+                }
+            }
+
+            if (!$autoLabel) {
+                $this->addFieldError('label',$this->modx->lexicon('collections.err.template_ns_label'));
+            }
+        }
+
         $position = $this->getProperty('position');
         if (empty($position)) {
             $c = $this->modx->newQuery('CollectionTemplateColumn');
