@@ -1,5 +1,6 @@
 Changelog for Collections.
 
+- Auto set column label from TV caption or Tagger group name
 - Pass columns value as input to snippet renderer
 - Add sort type as a new Collection's view setting
 - Add content disposition as a new Collection's view setting 
